test/should-fail/函数不存在-2.j
function test takes nothing returns nothing
    local code c = function Nothing
endfunction